# tanstack-ai-demo

./: .gitignore  README.md  approval-continuation-decision.md  flow-overview.md  happy-path.md
backend/: .env.example  pyproject.toml
backend/src/: __init__.py  agent.py  data_store.py  db.py  deps.py  main.py  tools.py
backend/src/backend/: agent.py  continuations.py  data_store.py  db.py  deps.py  logging.py  main.py  settings.py  tools.py
backend/src/backend/ports/: __init__.py  artifact_store.py  run_store.py
backend/src/backend/store/: __init__.py  artifact_store.py  postgres_run_store.py  run_store.py  s3_artifact_store.py
backend/src/backend/tools/: __init__.py  _common.py  data.py  export.py  sql.py
backend/tests/: test_artifact_store.py
frontend/: .env.local  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/features/chat/: ApprovalCard.tsx  ApprovalModal.tsx  ChatPage.tsx  ToolInputPanel.tsx  chatConnection.ts  sse.ts  toolResult.ts  useChatStream.ts
frontend/src/features/chat/__tests__/: toolResult.test.ts  useChatSession.test.tsx
frontend/src/features/chat/components/: ApprovalCard.tsx  ArtifactPreview.tsx  MessageBubble.tsx  MessagePartView.tsx  PendingApprovalsPanel.tsx  ToolCallPartView.tsx  ToolInputPanel.tsx  ToolResultPartView.tsx
frontend/src/features/chat/hooks/: useChatSession.ts
frontend/src/features/chat/services/: dataService.ts
frontend/src/features/chat/types/: index.ts
frontend/src/features/chat/utils/: parsing.ts  tanstackCompat.ts
scripts/: e2e_hilt_smoke.py
